2008-04-18 Dmitry Dulepov  <dmitry@typo3.org>

	* First implementation ready

2008-04-17 Dmitry Dulepov  <dmitry@typo3.org>

	* Initial code generated with kickstarter